# DrugClaw

./: Cargo.toml  README.md  TEST.md  drugclaw.config.example.yaml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  extended-ci.yml  nightly-stability.yml  release-assets.yml  release.yml
crates/drugclaw-app/src/: builtin_skills.rs
crates/drugclaw-storage/src/: db.rs
crates/drugclaw-tools/src/: runtime.rs
docs/: a2a.md
docs/operations/: acp-stdio.md
docs/releases/: upgrade-guide.md
scripts/: release_finalize.sh
skills/genomics/epigenomics-tools/: SKILL.md
skills/genomics/epigenomics-tools/templates/: epigenomics_analyze.py
skills/medical/pharmacovigilance-tools/: SKILL.md
skills/medical/pharmacovigilance-tools/templates/: pharmacovigilance_analyze.py
skills/pharma/active-learning-tools/: SKILL.md
skills/pharma/active-learning-tools/templates/: active_learning_select.py
skills/pharma/molecular-generation-tools/: SKILL.md
skills/pharma/molecular-generation-tools/templates/: molecular_generate.py
skills/pharma/pk-modeling-tools/: SKILL.md
skills/pharma/pk-modeling-tools/templates/: pk_analysis.py
skills/pharma/retrosynthesis-tools/: SKILL.md
skills/pharma/retrosynthesis-tools/templates/: retrosynthesis_analyze.py
skills/research/competitive-intelligence-tools/: SKILL.md
skills/research/competitive-intelligence-tools/templates/: competitive_landscape.py
skills/research/drug-repurposing-tools/: SKILL.md
skills/research/drug-repurposing-tools/templates/: drug_repurpose.py
skills/research/knowledge-graph-tools/: SKILL.md
skills/research/knowledge-graph-tools/templates/: knowledge_graph.py
skills/research/multi-objective-optimization-tools/: SKILL.md
skills/research/multi-objective-optimization-tools/templates/: multi_objective_optimize.py
skills/research/patent-landscape-tools/: SKILL.md
skills/research/patent-landscape-tools/templates/: patent_landscape.py
skills/science/knowledge-graph-tools/: SKILL.md
skills/science/knowledge-graph-tools/template/: knowledge_graph.py
skills/science/network-pharmacology-tools/: SKILL.md
skills/science/network-pharmacology-tools/templates/: network_pharmacology.py
skills/science/patent(US)-landscape-tools/: SKILL.md
skills/science/patent(US)-landscape-tools/template/: patent(us)_landscape.py
skills/science/pathway-enrichment-tools/: SKILL.md
src/: a2a.rs  acp.rs  chat_commands.rs  config.rs  lib.rs  llm.rs  main.rs  scheduler.rs  web.rs
src/tools/: a2a.rs  mod.rs  structured_memory.rs
src/web/: config.rs
tests/: config_validation.rs
(+1 files in other folders)
