[workspace]
members = [
    ".",
    "crates/drugclaw-core",
    "crates/drugclaw-clawhub",
    "crates/drugclaw-storage",
    "crates/drugclaw-tools",
    "crates/drugclaw-channels",
    "crates/drugclaw-app",
]
resolver = "2"

[package]
name = "drugclaw"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
default-run = "drugclaw"

[features]
default = []
sqlite-vec = ["drugclaw-storage/sqlite-vec"]
journald = ["drugclaw-app/journald"]

[dependencies]
drugclaw-core = { path = "crates/drugclaw-core" }
drugclaw-clawhub = { path = "crates/drugclaw-clawhub" }
drugclaw-storage = { path = "crates/drugclaw-storage" }
drugclaw-tools = { path = "crates/drugclaw-tools" }
drugclaw-channels = { path = "crates/drugclaw-channels" }
drugclaw-app = { path = "crates/drugclaw-app" }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
cron = "0.13"
urlencoding = "2"
base64 = "0.22"
chrono-tz = "0.10"
iana-time-zone = "0.1"
zip = "2"
sha2 = "0.10"
axum = "0.7"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
include_dir = "0.7"
async-stream = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
argon2 = "0.5"
opentelemetry-proto = { version = "0.28", features = ["gen-tonic-messages"] }
prost = "0.13"
matrix-sdk = { version = "0.16.0", default-features = false, features = ["e2e-encryption", "automatic-room-key-forwarding", "native-tls", "sqlite", "bundled-sqlite"] }
clap = { version = "4.5", features = ["derive"] }
http = "1"
rmcp = { version = "1.1", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
shellexpand = "3.1.2"
agent-client-protocol = "0.10.0"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tower = "0.5"
